==> fpoussin/OpenTCS/code/src/ssd1306.c <==
#include <string.h>
#include "ssd1306.h"
#include "stm32f0xx.h"
#define CMD(c)        do { palClearPad( SSD1306_DC_PORT, SSD1306_DC_PIN); \
                           ssd1306SendByte( c ); \
                         } while (0);
#define DATA(c)       do { palSetPad( SSD1306_DC_PORT, SSD1306_DC_PIN); \
                           ssd1306SendByte( c ); \
                         } while (0);

void ssd1306Init(uint8_t vccstate)
{
  spiInit(SSD1306_SPI);

  // Reset the LCD
  palClearPad(SSD1306_RST_PORT, SSD1306_RST_PIN);
  chThdSleepMilliseconds(10);
  palSetPad(SSD1306_RST_PORT, SSD1306_RST_PIN);
  chThdSleepMilliseconds(10);

  // Initialisation sequence
  CMD(SSD1306_DISPLAYOFF);                    // 0xAE
  CMD(SSD1306_SETLOWCOLUMN | 0x0);            // low col = 0
  CMD(SSD1306_SETHIGHCOLUMN | 0x0);           // hi col = 0
  CMD(SSD1306_SETSTARTLINE | 0x0);            // line #0
  CMD(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC)
    { CMD(0x9F) }
  else
    { CMD(0xCF) }
  CMD(0xa1);                                  // setment remap 95 to 0 (?)
  CMD(SSD1306_NORMALDISPLAY);                 // 0xA6
  CMD(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
  CMD(SSD1306_SETMULTIPLEX);                  // 0xA8
  CMD(0x3F);                                  // 0x3F 1/64 duty
  CMD(SSD1306_SETDISPLAYOFFSET);              // 0xD3
  CMD(0x0);                                   // no offset
  CMD(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
  CMD(0x80);                                  // the suggested ratio 0x80
  CMD(SSD1306_SETPRECHARGE);                  // 0xd9
  if (vccstate == SSD1306_EXTERNALVCC)
    { CMD(0x22) }
  else
    { CMD(0xF1) }
  CMD(SSD1306_SETCOMPINS);                    // 0xDA
  CMD(0x12);                                  // disable COM left/right remap
  CMD(SSD1306_SETVCOMDETECT);                 // 0xDB
  CMD(0x40);                                  // 0x20 is default?
  CMD(SSD1306_MEMORYMODE);                    // 0x20
  CMD(0x00);                                  // 0x0 act like ks0108
  CMD(SSD1306_SEGREMAP | 0x1);
  CMD(SSD1306_COMSCANDEC);
  CMD(SSD1306_CHARGEPUMP);                    //0x8D
  if (vccstate == SSD1306_EXTERNALVCC)
    { CMD(0x10) }
  else
    { CMD(0x14) }

  // Auto refresh 50ms - 20fps
  SSD1306_TIMER->CR1 = 0;
  SSD1306_TIMER->CR2 = 0;
  SSD1306_TIMER->CNT = 0;
  SSD1306_TIMER->PSC = 24000 - 1;	// Set prescaler to 24 000 (PSC + 1) (1KHz)
  SSD1306_TIMER->ARR = 50;	        // Auto reload value
}

void ssd1306Refresh(void) 
{
  CMD(SSD1306_SETLOWCOLUMN | 0x0);  // low col = 0
  CMD(SSD1306_SETHIGHCOLUMN | 0x0);  // hi col = 0
  CMD(SSD1306_SETSTARTLINE | 0x0); // line #0

  palSetPad( SSD1306_DC_PORT, SSD1306_DC_PIN);

  spiSendS(SSD1306_SPI, buffer, 1024);
}

void ssd1306DrawChar(uint8_t x, uint8_t y, uint8_t c, struct FONT_DEF font)
{
  uint8_t col, column[font.u8Width];

  // Check if the requested character is available
  if ((c >= font.u8FirstChar) && (c <= font.u8LastChar))
  {
    // Retrieve appropriate columns from font data
    for (col = 0; col < font.u8Width; col++)
    {
      column[col] = font.au8FontTable[((c - 32) * font.u8Width) + col];    // Get first column of appropriate character
    }
  }
  else
  {
    // Requested character is not available in this font ... send a space instead
    for (col = 0; col < font.u8Width; col++)
    {
      column[col] = 0xFF;    // Send solid space
    }
  }

  // Render each column
  uint16_t xoffset, yoffset;
  for (xoffset = 0; xoffset < font.u8Width; xoffset++)
  {
    for (yoffset = 0; yoffset < (font.u8Height + 1); yoffset++)
    {
      uint8_t bit = 0x00;
      bit = (column[xoffset] << (8 - (yoffset + 1)));     // Shift current row bit left
      bit = (bit >> 7);                     // Shift current row but right (results in 0x01 for black, and 0x00 for white)
      if (bit)
      {
        ssd1306DrawPixel(x + xoffset, y + yoffset);
      }
    }
  }
}
